# simple-task-explorer

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  EXTENSION.md  PRD.md  README.md  package-lock.json  package.json  simple-task-explorer.code-workspace  tsconfig.json
.claude/: settings.local.json
manual_tests/venv_activation/test-project/: pyproject.toml
manual_tests/venv_activation/test-project/src/test_project/: __main__.py
scripts/: publish.sh
src/: extension.ts  taskItem.ts  taskProvider.ts
